<resources>
    <string name="app_name">TestingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currencies">Currencies</string>
    <string name="favorite_list">Favorite list</string>
    <string name="unauthorized">You have not supplied a valid API Access Key.</string>
    <string name="inActive">The account this API request is coming from is inactive.</string>
    <string name="errorConnect">Incorrect request, check internet</string>
    <string name="sort">Sort</string>
    <string name="todo">TODO</string>
    <string name="sort_page">Sort Page</string>
    <string name="your_favorite_list_is_empty">Your favorite list is empty</string>
    <string name="sort_by_rate_value">Sort by rate value</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by_name_rate">Sort by name rate</string>
    <string name="search_rate">Search rate</string>
</resources>