<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SortPageFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/back_icon"
        app:layout_constraintBottom_toBottomOf="@id/back_icon"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/sort_page"
        android:background="@color/pink"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".15"
        app:layout_constraintDimensionRatio="1"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_arrow_back_24"
        />
    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back_icon"
        android:textSize="20sp"
        android:background="@color/pink"
        app:layout_constraintBottom_toTopOf="@id/title2"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/sort_by_rate_value"
        />
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/title1"
        android:background="@color/background"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/value_ascending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".45"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ascending"
        android:textColor="@color/white"
        android:elevation="5dp"
        android:gravity="center"
        android:background="@drawable/item_sort_shape"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/value_descending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".45"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/descending"
        android:textColor="@color/white"
        android:elevation="5dp"
        android:gravity="center"
        android:background="@drawable/item_sort_shape"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/value_ascending"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/pink"
        android:gravity="center"
        android:text="@string/sort_by_name_rate"
        />
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/title2"
        android:background="@color/background"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/name_ascending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".45"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ascending"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="5dp"
        android:background="@drawable/item_sort_shape"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/name_descending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".45"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/descending"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="5dp"
        android:background="@drawable/item_sort_shape"
        android:padding="10dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>